tests/baselines/reference/asOperatorContextualType.errors.txt
tests/cases/conformance/expressions/asOperator/asOperatorContextualType.ts(2,9): error TS2323: Type '(v: number) => number' is not comparable with type '(x: number) => string'.
  Type 'number' is not comparable with type 'string'.


==== tests/cases/conformance/expressions/asOperator/asOperatorContextualType.ts (1 errors) ====
    // should error
    var x = (v => v) as (x: number) => string;
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2323: Type '(v: number) => number' is not comparable with type '(x: number) => string'.
!!! error TS2323:   Type 'number' is not comparable with type 'string'.